<resources>
    <string name="app_name">Jobless</string>
    <string name="welcome_text">Estimate \nUnemployment\nCompensation</string>
    <string name="previous_estimate">Previous Estimate</string>
    <string name="new_estimate">New Estimate</string>
    <string name="draft">Draft</string>
    <string name="home">Home</string>
    <string name="payment_type">Select Payment Type</string>
    <string name="employment_status">Select Employment Status</string>
    <string name="employed">Employed</string>
    <string name="unemployed">Unemployed</string>
    <string name="part_time">Part Time</string>
    <string name="fired">Fired</string>
    <string name="laid_off">Laid Off</string>
    <string name="quit">Quit</string>
    <string name="weekly_payment_type">Weekly</string>
    <string name="biweekly_payment_type">Biweekly</string>
    <string name="monthly_payment_type">Monthly</string>
    <string name="income_label">Enter Information For\n%s</string>
    <string name="continue_to_job_button">Continue To Job %s</string>
    <string name="start_date">Enter Start Date Of Work</string>
    <string name="last_date">Enter Last Date Of Work</string>
    <string name="date_type_hint">mm/dd/yyyy</string>
    <string name="amount_type_hint">$00000.00</string>
    <string name="click_to_enter_income">Income For %s\nClick On The Item To Enter Income</string>
    <string name="income_period">Income Period</string>
    <string name="submit">Estimate \nUnemployment Compensation</string>
    <string name="next_income_period">Next Income Period</string>
    <string name="back">Back</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="dob">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="edit">Edit</string>
    <string name="age">Age</string>
    <string name="select_dob">Select\nYour Birthday Date</string>
    <string name="unknown">Unknown</string>
    <string name="weeks_to_collect">Weeks To Collect</string>
    <string name="weekly_benefit">Weekly Benefit</string>
    <string name="total_benefit">Total Benefit</string>
    <string name="job_details">Job Details</string>
    <string name="position">Position</string>
    <string name="income_details">Income Details</string>
    <string name="jobs_count">How Many Jobs do You Have/Had\nFor The Last Year And A Half? </string>
    <string name="enter_job_name">Enter Job %d Name</string>
    <string name="alert_message">Alert Message</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="load">Load</string>
    <string name="done">Done</string>
    <string name="done_sign">Done Sign</string>
    <string name="no">No</string>
    <string name="load_auto_save_message">The Application Was Exit Unexpectedly!\nWould You Like To Load The Saved Data? </string>
    <string name="click_enter_job_names">Click Here To Enter Job\'s Names</string>
    <string name="no_more_jobs">No More Jobs to Enter</string>
    <string name="click_edit_jobs_names">Click Here To Edit The Job\'s Names</string>
    <string name="edit_name">Click On the Name To Edit</string>
    <string name="enter_job_over_10">Enter Job Count</string>
    <string name="editing_name">Edit The Selected Name</string>
    <string name="next">Next</string>
    <string name="exit">Exit</string>
    <string name="back_to_jobs_names">Jobs</string>
    <string name="no_names_added">No Jobs Added!</string>
    <string name="right_arrow">Right Arrow</string>
    <string name="job">Job</string>
    <string name="alert_message_no_jobs">No Job\'s Names Were Added</string>
    <string name="alert_message_missing_jobs">Missing Job\'s Names</string>
    <string name="default_jobs_names_added">"Default Job\'s Names Added"</string>
    <string name="missing_job_names_added">"Missing Job\'s Names.\nDefault Names Were Added"</string>
    <string name="removing_the_extra_names">"The Extra Job\'s Names Were Removed"</string>
    <string name="current_compensation">Current Unemployment Compensation\nBase On Year\n%s</string>
    <string name="not_eligible_for_benefit">You Are Not Eligible For\nUnemployment Compensation!\nYou Must Have 21 Base Weeks Work\nOr\nAt Least $8400.00 Total Income! </string>
    <string name="save_information">Would You Like To Save Your Information?</string>
    <string name="done_with_this_job">Done\nWith %s</string>
    <string name="invalid_date_last_day">Invalid Last Date!</string>
    <string name="invalid_date_first_day">Invalid First Date!</string>
    <string name="enter_first_date">Enter Start Date Of Work!</string>
    <string name="enter_last_date">Enter Last Date Of Work!</string>
    <string name="select_payment_type">Select Payment Type!</string>
    <string name="last_date_job_does_not_qualify">Last Day Of Work Must Be\nAfter %s\nThis Job Does Not Qualify</string>
    <string name="first_date_job_does_not_qualify">Start Day Of Work Must Be\nBefore %s\nThis Job Does Not Qualify</string>
    <string name="error_loading_data">Error Loading Data!\nStart Over With This Job!</string>




</resources>
