<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:columnCount="1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/padding"
    android:layout_marginRight="@dimen/padding">

    <TextView
        android:id="@+id/enterJobNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/padding"
        android:text="@string/enter_job_name"
        android:textAlignment="center"
        android:textSize="@dimen/default_text_size" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:weightSum="1">


        <EditText
            android:id="@+id/enterJobNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|start"
            android:layout_margin="@dimen/margin"
            android:layout_weight="0.80"
            android:background="@drawable/user_input_text_view"
            android:ems="10"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:padding="@dimen/padding"
            android:textAlignment="viewStart"
            android:textSize="@dimen/default_text_size" />

        <Button
            android:id="@+id/saveJobNameButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|start"
            android:layout_margin="@dimen/margin"
            android:layout_weight="0.20"
            android:padding="@dimen/padding"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:text="@string/save"
            style="@style/Widget.AppCompat.Button.Colored"
            android:textSize="@dimen/default_button_text_size"/>


    </LinearLayout>

    <ListView
        android:id="@+id/jobNamesListView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_view_small"
        android:layout_margin="@dimen/margin" />

    <Button
        android:id="@+id/doneWithNamesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:padding="@dimen/padding"
        android:text="@string/done"
        android:layout_gravity="center_horizontal"
        style="@style/Widget.AppCompat.Button.Colored"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@drawable/button_color_state"
        android:textSize="@dimen/default_button_text_size" />

</GridLayout>